--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>A simple title goes here</title>
-<link href="style.css" rel="stylesheet" />
+    <meta charset="UTF-8">
+    <title>999 Challenge</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffffff;
+            color: #000000;
+            max-width: 700px;
+            margin: 40px auto;
+            line-height: 1.6;
+        }
+        .stanza {
+            margin-bottom: 24px;
+        }
+        h1 {
+            font-weight: normal;
+        }
+    </style>
 </head>
-
 <body>
-<h1>A simple heading goes here</h1>
-<p>This is a short paragraph. Here is another sentence.</p>
-</body>
+<img src="img/challenge.jpg" >
+<img src="img/speedrun.jpg" >
+<h1>999 Challenge</h1>
 
+<div class="stanza">
+    <p>9 Hotdogs</p>
+    <p>9 Beers</p>
+    <p>9 Innings</p>
+</div>
+
+<div class="stanza">
+    <p>Been long-standing winning my whole life<br>
+    In the past, Mar 29, 2012 - 999 Beers, 999 Hotdogs, 999 innings<br>
+    And now at 39, 2 beers, 3 hotdogs, 9 innings. What do I do? Anybody?</p>
+</div>
+
+<div class="stanza">
+    <p>China's Mario Super Sluggers challenge to the United States<br>
+    Implications for military power and 35,000 secret unlockables</p>
+</div>
+
+<div class="stanza">
+    <p>9 Hotdogs</p>
+    <p>9 Beers</p>
+    <p>9 Innings</p>
+    <p>1 Mario</p>
+</div>
+
+<div class="stanza">
+    <p>Can I beat this Mario Super Sluggers China challenge?</p>
+</div>
+
+<div class="stanza">
+    <p>I select a character, Mario.<br>
+    China gets top star Baby DK<br>
+    It appears we're leading<br>
+    I have no appetite for beers… PRC 31 runs scored<br>
+    It's no game, sometimes luck ain't on your side…</p>
+</div>
+
+<div class="stanza">
+    <p>2 Hotdogs</p>
+    <p>1 Beer</p>
+    <p>9 Innings</p>
+</div>
+<img src="img/loser.jpg" >
+<img src="img/yoshi.jpg" >  
+</body>
+</html>
