--- a/index.html
+++ b/index.html
@@ -3,22 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>999 Challenge</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #ffffff;
-            color: #000000;
-            max-width: 700px;
-            margin: 40px auto;
-            line-height: 1.6;
-        }
-        .stanza {
-            margin-bottom: 24px;
-        }
-        h1 {
-            font-weight: normal;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <img src="img/challenge.jpg" >
